[gd_scene load_steps=4 format=3 uid="uid://yfg0c552s0ue"]

[ext_resource type="Script" path="res://Puzzle Games/Game 1/Scripts/bomb_area.gd" id="1_rtb1x"]
[ext_resource type="Texture2D" uid="uid://bkuyx5ka8itih" path="res://Puzzle Games/Game 1/Images/bomb.png" id="2_8n35a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3on06"]
size = Vector2(64, 64)

[node name="Bomb Area" type="Area2D"]
visible = false
script = ExtResource("1_rtb1x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3on06")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("2_8n35a")
expand_mode = 1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
